vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentMoment_v2__c/SDO_Analytics_AIAgentMoment_v2__c.object-meta.xml
<CustomObject>
    <label>AIAgentMoment</label>
    <nameField>
        <label>AIAgentMoment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIAgentMoments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>