vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentMoment_v2__c/fields/End_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>End_Timestamp__c</fullName>
    <formula>DATETIMEVALUE(TEXT(TODAY() + End_Days__c) + &quot; &quot; + End_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Timestamp</label>
    <type>DateTime</type>
</CustomField>