vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentMoment_v2__c/fields/Response_Summary_Text__c.field-meta.xml
<CustomField>
    <fullName>Response_Summary_Text__c</fullName>
    <label>Response Summary Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>