vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentMoment_v2__c/fields/Start_Days__c.field-meta.xml
<CustomField>
    <fullName>Start_Days__c</fullName>
    <label>Start Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>