vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentMoment_v2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AI_Agent_API_Name__c</columns>
    <columns>AI_Agent_Session__c</columns>
    <columns>AI_Agent_Version_API_Name__c</columns>
    <columns>Request_Summary_Text__c</columns>
    <columns>Response_Summary_Text__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Start_Days__c</columns>
    <columns>End_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>